# PaperNewsBot

./: .env  .env.example  ARCHITECTURE.md  DEPLOYMENT.md  OPERATIONS.md  PROJECT_DOCUMENTATION.md  QUICK_START.md  main.py  pyproject.toml  readme.md  requirements.txt  test_complete_system.py  test_user_system.py
data/: papernews.db
src/: __init__.py  scheduler.py
src/bot/: __init__.py  telegram_bot.py
src/config/: __init__.py  settings.py
src/crawlers/: __init__.py  arxiv_crawler.py  base.py  openreview_crawler.py
src/models/: __init__.py  database.py
src/services/: __init__.py  ai_service.py  briefing_service.py  paper_service.py  user_service.py
src/utils/: __init__.py  logger.py
tests/: test_crawlers.py  test_services.py
